--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 "Helvetica Neue", 'sans-serif';
+  font: 300 11px/1.4 "Helvetica Neue", 'sans-serif';
   color: #333;
   background-color: #12425c;
   overflow: hidden;
@@ -12,4 +12,3 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
