--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -9,38 +9,67 @@
         max-height: 90%;
     }
 
+    // h1 {
+    //     color: white;
+    //     font-size: 53px;
+    //     margin: 0;
+    //     font-family: 'Coolvetica';
+    //     font-weight: 600;
+
+    //     &:before {
+    //         content: '<h1>';
+    //         font-family: 'La Belle Aurore';
+    //         color: white;
+    //         font-size: 18px;
+    //         position: absolute;
+    //         margin-top: -40px;
+    //         left: 15px;
+    //         opacity: 0.6;
+    //     }
+
+    //     &:after {
+    //         content: 'This is the content';
+    //         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    //         color: white;
+    //         font-size: 18px;
+    //         position: absolute;
+    //         margin-top: 20px;
+    //         margin-left: 20px;
+    //         animation: fadeIn 1s 1.7s backwards;
+    //         opacity: 0.6;
+    //     }
+    // }
+
     h1 {
-        color: white;
-        font-size: 53px;
+        color: #fff;
+        font-size: 56px;
+        line-height: 53px;
         margin: 0;
-        font-family:'Segoe UI', 'Tahoma', 'Geneva', "Verdana", 'sans-seri';
-        font-weight: 600;
-
-        &::before {
-            content: '<h1>';
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            color: white;
-            font-size: 20px;
-            position: absolute;
-            margin-top: -40px;
-            left: 15px;
-            opacity: 0.6;
+        font-family: 'Coolvetica';
+        font-weight: 400;
+    
+        &:before {
+          content: '<h1>';
+          font-family: 'La Belle Aurore', cursive;
+          color: #ffd700;
+          font-size: 18px;
+          position: absolute;
+          margin-top: -40px;
+          left: -15px;
+          opacity: 0.6;
         }
-
-        &::after {
-            content: '<h1>';
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            color: white;
-            font-size: 18px;
-            position: absolute;
-            margin-top: 20px;
-            margin-left: 20px;
-            animation: fadeIn 1s 1.7s backwards;
-            opacity: 0.6;
+    
+        &:after {
+          content: '<h1/>';
+          font-family: 'La Belle Aurore', cursive;
+          color: #ffd700;
+          font-size: 18px;
+          position: absolute;
+          margin-top: 18px;
+          margin-left: 20px;
+          animation: fadeIn 1s 1.7s backwards;
+          opacity: 0.6;
         }
-
-        img {
-            width: 32px
-        }
+    
     }
 }
