--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -9,37 +9,6 @@
         max-height: 90%;
     }
 
-    // h1 {
-    //     color: white;
-    //     font-size: 53px;
-    //     margin: 0;
-    //     font-family: 'Coolvetica';
-    //     font-weight: 600;
-
-    //     &:before {
-    //         content: '<h1>';
-    //         font-family: 'La Belle Aurore';
-    //         color: white;
-    //         font-size: 18px;
-    //         position: absolute;
-    //         margin-top: -40px;
-    //         left: 15px;
-    //         opacity: 0.6;
-    //     }
-
-    //     &:after {
-    //         content: 'This is the content';
-    //         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    //         color: white;
-    //         font-size: 18px;
-    //         position: absolute;
-    //         margin-top: 20px;
-    //         margin-left: 20px;
-    //         animation: fadeIn 1s 1.7s backwards;
-    //         opacity: 0.6;
-    //     }
-    // }
-
     h1 {
         color: #fff;
         font-size: 56px;
@@ -51,7 +20,7 @@
         &:before {
           content: '<h1>';
           font-family: 'La Belle Aurore', cursive;
-          color: #ffd700;
+          color: yellow;
           font-size: 18px;
           position: absolute;
           margin-top: -40px;
@@ -62,7 +31,7 @@
         &:after {
           content: '<h1/>';
           font-family: 'La Belle Aurore', cursive;
-          color: #ffd700;
+          color: yellow;
           font-size: 18px;
           position: absolute;
           margin-top: 18px;
@@ -70,6 +39,37 @@
           animation: fadeIn 1s 1.7s backwards;
           opacity: 0.6;
         }
-    
     }
+
+  h2 {
+    color: #BFC0C0;
+    font-family: 'Coolvetica';
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: 4px;
+    animation: fadeIn 1s 1.8s backwards;
+  }
+
+  .contact-btn {
+    font-family: 'Coolvetica';
+    font-size: 20px;
+    color: #90E0EF; 
+    font-weight: 300;
+    letter-spacing: 3px;
+    text-decoration: none;
+    border: 1px solid #90E0EF;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 25px;
+    float: left;
+    animation: fadeIN 1s 1.9s backwards;
+    white-space: nowrap;
+
+    &:hover {
+      font-weight: 300;
+      background-color: #90E0EF;
+      color: #333;
+      border: 1px solid #90E0EF;
+    }
+  }
 }
