--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,5 +1,8 @@
 .nav-bar {
-    background: #1D8A99;
+    // background: #EF8354;
+    // background: #1D8A99;
+    background-color: #0077B6;
+
     width: 70px;
     height: 100%;
     position: absolute;
@@ -20,98 +23,99 @@
     }
 
 
-nav {
-    display:block;
-    text-align: center;
-    position: absolute;
-    height: 210px;
-    top: 50%;
-    margin-top: -120px;
-    width: 100%;
+    nav {
+        display:block;
+        text-align: center;
+        position: absolute;
+        height: 210px;
+        top: 50%;
+        margin-top: -120px;
+        width: 100%;
 
-    a {
-        font-size: 22px;
-        color: #4d4d4e;
-        display: block;
-        line-height: 51px;
-        height: 51px;
-        position: relative;
-        text-decoration: none;
+        a {
+            font-size: 22px;
+            color: #4d4d4e;
+            display: block;
+            line-height: 51px;
+            height: 51px;
+            position: relative;
+            text-decoration: none;
 
-        i {
-            transition: all 0.3s ease-out;
-        }
+            i {
+                transition: all 0.3s ease-out;
+            }
 
-        &:hover {
-            color: rgb(193, 250, 4);
+            &:hover {
+                color: rgb(193, 250, 4);
+                // color: #CAF0F8;
 
-            svg {
-                opacity: .5;
+                svg {
+                    opacity: .5;
+                }
+
+                &:after {
+                    opacity: 1;
+                }
             }
 
             &:after {
-                opacity: 1;
-            }
-        }
-
-        &:after {
-            content: "";
-            font-size: 9px; 
-            letter-spacing: 2px;
-            position: absolute;
-            bottom: 0;
-            display: block;
-            width: 100%;
-            text-align: center;
-            opacity: 0;
-            transition: all 0.3s ease-out;
-        }
-
-        &:first-child {
-            &::after {
-                content: "HOME";
-            }
-        }
-    }
-
-        a.about-link {
-            &::after {
-                content: "ABOUT ME"
-            }
-        }
-        a.contact-link {
-            &::after {
-                content: "CONTACT"
-            }
-        }
-
-        // a.active {
-        //     svg {
-        //         color: yellow;
-        //     }
-        // }
-    } 
-    ul {
-        position: absolute;
-        bottom: 25px;
-        width: 100%;
-        display: block;
-        padding: 0;
-        list-style: none;
-        text-align: center;
-        margin: 0;
-
-        li {
-            a {
-                padding: 9px 0; 
+                content: "";
+                font-size: 9px; 
+                letter-spacing: 2px;
+                position: absolute;
+                bottom: 0;
                 display: block;
-                font-size: 23px;
-                line-height: 16px;
+                width: 100%;
+                text-align: center;
+                opacity: 0;
+                transition: all 0.3s ease-out;
+            }
 
-                &:hover svg {
-                    color: rgb(193, 250, 4);
+            &:first-child {
+                &::after {
+                    content: "HOME";
                 }
             }
         }
-    }
+
+            a.about-link {
+                &::after {
+                    content: "ABOUT ME"
+                }
+            }
+            a.contact-link {
+                &::after {
+                    content: "CONTACT"
+                }
+            }
+
+            a.active {
+                svg {
+                    color: yellow;
+                }
+            }
+        } 
+        ul {
+            position: absolute;
+            bottom: 25px;
+            width: 100%;
+            display: block;
+            padding: 0;
+            list-style: none;
+            text-align: center;
+            margin: 0;
+
+            li {
+                a {
+                    padding: 9px 0; 
+                    display: block;
+                    font-size: 23px;
+                    line-height: 16px;
+
+                    &:hover svg {
+                        color: rgb(193, 250, 4);
+                    }
+                }
+            }
+        }
 }
