--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   font: 300 11px/1.4 "Helvetica Neue", 'sans-serif';
   color: #333;
+  /* background-color: #2D3142; */
+  /* background-color: #4F5D75; */
   background-color: #12425c;
   overflow: hidden;
   display: block;
