--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -8,3 +8,72 @@
     right: 0;
     overflow: hidden;
 }
+
+.cubeSpin {
+    animation-name: spinCube;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 10s;
+    transform-style: preserve-3d;
+    transform-origin: 100px 100px 0;
+    margin-left: calc(50% - 100px);
+
+    div {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        border: 1px solid #00B4D8;
+        background-color: rgba(255, 255, 255, 0.739);
+        font-size: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 20px 0px #00B4D8;
+    }
+
+    .side1 {
+        transform: translateZ(100px);
+    }
+
+    .side2 {
+        transform: rotateY(90deg) translateZ(100px);
+    }
+    
+    .side3 {
+        transform: rotateY(180deg) translateZ(100px);
+    }
+
+    .side4 {
+        transform: rotateY(270deg) translateZ(100px);
+    }
+
+    .side5 {
+        transform: rotateX(90deg) translateZ(100px);
+    }
+
+    .side6 {
+        transform: rotateX(-90deg) translateZ(100px);
+    }
+}
+
+@keyframes spinCube {
+    from, 
+    to {
+        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    }
+    25% {
+        transform:  rotateY(-90deg);
+    }
+    33% {
+        transform:  rotateY(-90deg) rotateZ(90deg);
+    }
+    50% {
+        transform:  rotateY(-180deg) rotateZ(90deg);
+    }
+    66% {
+        transform:  rotateY(-270deg) rotateZ(90deg);
+    }
+    83% {
+        transform:  rotateY(90deg);
+    }
+}
