added a projects page with route. I noticed on the contact input buttons that when clicked, the box goes blurry and I'm not sure how to fix. But okay gn, 1:49AM.

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -40,7 +40,7 @@
         background-color: #8fd3df;
         border-radius: 3px;
         font-size: 16px;
-        color: #ffffff;
+        color: #201e1e;
         margin-bottom: 10px;
         box-sizing: border-box;
         font-family: 'Open Sans', sans-serif;
@@ -54,7 +54,7 @@
         background-color: #8fd3df;
         border-radius: 3px;
         font-size: 16px;
-        color: #fff;
+        color: #201e1e;
         margin-bottom: 10px;
         box-sizing: border-box;
         resize: none;
