--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -10,7 +10,7 @@
     }
 
 .tags {
-        color: yellow;
+        color: #1c81b4;
         opacity: 0.6;
         position: absolute;
         bottom: 0;
@@ -39,7 +39,6 @@
 }
 
 .about-page,
-.projects-page,
 .contact-page {
     .text-area {
         position: absolute;
@@ -62,7 +61,7 @@
             left: 10px;
 
             &::before {
-                content: '<h1>';
+                content: '';
                 position: absolute;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 font-size: 18px;
@@ -73,7 +72,7 @@
             }
 
             &::after {
-                content: '</h1>';
+                content: '';
                 position: absolute;
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 font-size: 18px;
@@ -87,7 +86,7 @@
         }
 
         p {
-            font-style: 13px;
+            font-size: 14px;
             color: white;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-weight: 400;
