--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,7 +1,8 @@
 .nav-bar {
     // background: #EF8354;
     // background: #1D8A99;
-    background-color: #0077B6;
+    // background-color: #0077B6;
+    background-color: #d3f1fb;
 
     width: 70px;
     height: 100%;
@@ -46,7 +47,7 @@
             }
 
             &:hover {
-                color: rgb(193, 250, 4);
+                color: #0077B6;
                 // color: #CAF0F8;
                 font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 
@@ -62,7 +63,7 @@
 
             &:after {
                 content: "";
-                font-size: 9px; 
+                font-size: 10px; 
                 letter-spacing: 2px;
                 position: absolute;
                 bottom: 0;
@@ -100,7 +101,7 @@
 
             a.active {
                 svg {
-                    color: yellow;
+                    color: #1dc3e0;
                 }
             }
         } 
@@ -122,7 +123,7 @@
                     line-height: 16px;
 
                     &:hover svg {
-                        color: rgb(193, 250, 4);
+                        color: #1dc3e0;
                     }
                 }
             }
