--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,5 +1,6 @@
 .projects-page {
     .text-area {
+        background-color: green;
         position: absolute;
         left: 10%;
         top: 30%;
@@ -72,6 +73,34 @@
             animation: rubberBand 0.5s;
             color: #00B4D8;
             cursor: pointer;
+        }
+    }
+
+    .project-area {
+        position: absolute;
+        right: 5%;
+        width: 45%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 30px; 
+
+        .project-1, .project-2, .project-3, .project-4 {
+            display: block;
+            width: 100%;
+            height: 70%;
+            margin-top: 50px;
+            border: 3px solid white;
+            border-radius: 5%;
+            overflow: hidden;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.03);
+                transition: all 0.5s ease-in-out;
+            }
         }
     }
 }
