--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -45,8 +45,29 @@
             }
         }
 
-        p {
+        h2 {
             font-size: 14px;
+            color: white;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-weight: 400;
+            min-width: fit-content;
+            animation: pulse 1.5s;
+
+            &:nth-of-type(1) {
+                animation-delay: 1s;
+            }
+
+            &:nth-of-type(2) {
+                animation-delay: 1.3s;
+            }
+            
+            &:nth-of-type(3) {
+                animation-delay: 1.6s;
+            }
+        }
+
+        p {
+            font-size: 18px;
             color: white;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             font-weight: 400;
@@ -68,6 +89,42 @@
     }
 
 
+    .github-icons {
+        position: absolute;
+        top: 87%;
+        left: 1%;
+        width: 23%;
+        display: block;
+        padding: 0;
+        // text-align: center;
+        margin: 0;
+        font-size: 35px;
+        line-height: 16px;
+        color: black;
+
+        &:hover svg {
+            color: #0077B6;
+        }
+    }
+    
+    .password-gen-github {
+        position: absolute;
+        top: 87%;
+        left: 1%;
+        width: 23%;
+        display: block;
+        padding: 0;
+        // text-align: center;
+        margin: 0;
+        font-size: 35px;
+        line-height: 16px;
+        color: white;
+
+        &:hover svg {
+            color: #0077B6;
+        }
+    }
+
     .text-animate-hover {
         &:hover {
             animation: rubberBand 0.5s;
@@ -87,21 +144,47 @@
         gap: 30px; 
 
         .project-1, .project-2, .project-3, .project-4 {
-            display: block;
+            position: relative;
+            // display: block;
             width: 100%;
             height: 70%;
-            margin-top: 50px;
+            margin-top: 60px;
             border: 3px solid white;
             border-radius: 5%;
             overflow: hidden;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             // object-fit: none;
 
-            &:hover {
-                cursor: pointer;
-                transform: scale(1.03);
-                transition: all 0.5s ease-in-out;
+
+          
+
+                &:hover {
+                    cursor: pointer;
+                    transform: scale(1.03);
+                    transition: all 0.5s ease-in-out;
             }
         }
     }
+
+ 
+    // copilot write code that will make the .hide class appear when the .project-1 class is hovered over
+
+      
+
+    // .hide {
+    //     position: absolute;
+    //     opacity: 0;
+    //     background-color: red;
+    //     color: black;
+    //     font-size: 20px;
+    //     cursor: pointer;
+      
+    //     &.project-1 {
+    //       &:hover {
+    //         &.hide {
+    //           opacity: 1;
+    //         }
+    //       }
+    //     }
+    //   }
 }
