--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -32,6 +32,10 @@
         }
     }
 
+    // .contact-p {
+    //     font-size: 14px;
+    // }
+
     input[type="text"],
     input[type="email"] {
         width: 100%;
