--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,25 +1,54 @@
-p {
-    font-size: 20px;
-}
-
 .UT-tag {
-    color: #f66c0a;
-    // backdrop-filter: blur(10px);
-    background-color: #fff;
-    // background-opacity: 0.5;
-    border: 1px solid #f66c0a;
+    color: #f98c3d;
 }
 
+.UT-img {
+    position: absolute;
+    border: 5px solid #000000;
+    border-radius: 5%;
+    width: 20%;
+    // top: 30%;
+    margin-top: 30px;
+    height: 40%;
+    left: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.05);
+        transition: all 0.5s ease-in-out;
+    }
+}
+
+.image-area {
+    position: absolute;
+    right: 5%;
+    top: 12%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    
+    .boy-scout {
+        border: 5px solid #000000; 
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.01);
+            transition: all 0.5s ease-in-out;
+        }
+    }
+}
 
 .stage-cube-cont {
     width: 30%;
-    height: 100%;
-    top: -10%;
-    padding-top: 18%;
+    height: 50%;
+    top: 50%;
+    padding-top: 10%;
     margin-left: 0;
     position: absolute;
-    right: 15%;
+    right: 25%;
     overflow: hidden;
 }
 
