--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -32,10 +32,6 @@
         }
     }
 
-    // .contact-p {
-    //     font-size: 14px;
-    // }
-
     input[type="text"],
     input[type="email"] {
         width: 100%;
@@ -90,5 +86,15 @@
             color: #333;
             border: 1px solid #90E0EF;
           }
+    }
+}
+
+.texas-img {
+    position: relative;
+    left: 53%;
+    top: 3.5%;
+    img {
+        border: #201e1e 5px solid;   
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 }
