--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -96,5 +96,11 @@
     img {
         border: #201e1e 5px solid;   
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.01);
+            transition: all 0.35s ease-in-out;
+        }
     }
 }
