--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -40,6 +40,37 @@
         }
     }
 
+
+    @media (max-width: 1500px) {
+        .boy-scout {
+          width: 300px;
+          height: 400px;
+        }
+    }
+
+    
+    @media (max-width: 1300px) {
+        .boy-scout {
+          width: 225px;
+          height: 400px;
+        }
+    }
+        
+    @media (max-width: 970px) {
+        .boy-scout {
+          width: 190px;
+          height: 400px;
+        }
+    }
+    
+    @media (max-width: 850px) {
+        .boy-scout {
+          right: 5%;
+          width: 150px;
+          height: 400px;
+        }
+    }
+
     @media (max-width: 768px) {
         .boy-scout {
           width: 200px;
