finish the texas img flex later

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -90,9 +90,14 @@
 }
 
 .texas-img {
+    margin: 30px;
+    display: flex;
+    flex-direction: wrap;
+    justify-content: flex-end;
+    align-items: center;
     position: relative;
-    left: 53%;
-    top: 3.5%;
+    // left: 53%;
+    // top: 3.5%;
     img {
         border: #201e1e 5px solid;   
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
